--- a/index.html
+++ b/index.html
@@ -13,11 +13,13 @@
         <head class="head">
             <section class="background">
                 <!--NAV-->
+                <title>DECAPOD</title>
+                <section class="logo-container">
+                    <img class="logo" src="media/Logo.png">
+                    <p class="decapod">DECAPOD</p>
+                    <p class="slogan" href="#index">Feeding the World Sustainably</p>
+                </section>
                 <nav>
-                    <title>DECAPOD</title>
-                    <img id="logo" src="media/Logo.png">
-                    <p id="decapod">DECAPOD</p>
-                    <p id="slogan" href="#index">Feeding the World Sustainably</p>
                     <a href="index.html">HOME</a>
                     <a href="products.html">PRODUCTS</a>
                     <a href="team.html">OUR TEAM</a>
