--- a/sustainability.html
+++ b/sustainability.html
@@ -34,7 +34,7 @@
         <section class="section">
             <section class="section1">
                 <h1 style="color:#104364; font-size: 5rem;">Our Obligation to Nature</p>
-                <h3 style="color:white; font-size: 2rem;">We reduce the resource burden to our planet and foster a sustainable future with record low Co2e emissions and efficient feeding, while maintaining the highest standard for animal well being</h3>
+                <h3 style="color:white; font-size: 2rem;">We reduce the resource burden to our planet and foster a sustainable future with record low Co2e emissions and efficient feeding, while maintaining the highest standards of animal well-being.</h3>
             </section>
             <section class="section2">
                 <h3 style="padding-top: 2.5rem; padding-bottom: 1rem; color:white; font-size: 5rem; z-index: 2; background-image: url(media/Brushstroke-red.png); background-repeat: no-repeat; background-position: center; background-size: cover;" >CO2e</h3>
@@ -44,7 +44,11 @@
                 <h3 style="padding-top: 3rem; padding-bottom: 2.5rem; color:white; font-size: 5rem; z-index: 2; background-image: url(media/Brushstroke-red.png); background-repeat: no-repeat; background-position: center; background-size: cover;" >Feed Conversion Ratio</h3>
             </section>
             <section class="section4">
-
+                <img class="section4-fcr-cattle" src="media/FCR-catttle.png">
+                <section class="section4-text" style="background-image: url(media/brushstroke1.png); background-repeat: no-repeat; background-size: contain;">
+                    <h3 class="section4-text-background-text"style="font-size: 2rem; color: white;">Cattle are one of the least efficient sources of food in terms of how much feed it takes to produce 1 kg of meat.</h3>
+                    <h3 style="font-size: 2rem; color: white; font-weight: bold;">
+                </section>
             </section>
         </section>
         <!--FOOTER-->
