--- a/team.html
+++ b/team.html
@@ -17,9 +17,9 @@
                 }
                 body {
                     place-items: center;
-                    background-image:url(media/janroar.jpg);
+                    background-image:url(media/janroar.png);
                     background-size: cover;
-                    background-position: bottom;
+                    background-position: center;
                     background-repeat:no-repeat;
                     padding-bottom: 100%;
                 }
