--- a/index.html
+++ b/index.html
@@ -19,14 +19,34 @@
                     <p class="decapod">DECAPOD</p>
                     <p class="slogan" href="#index">Feeding the World Sustainably</p>
                 </section>
-                <nav>
-                    <a href="index.html">HOME</a>
-                    <a href="products.html">PRODUCTS</a>
-                    <a href="team.html">OUR TEAM</a>
-                    <a href="recipes.html">RECIPES</a>
-                    <a href="partners.html">PARTNERS</a>
-                    <a href="sustainability.html">SUSTAINABILITY</a>
-                </nav>
+                <section class="nav-container">
+                    <nav>
+                        <a href="index.html">HOME</a>
+                        <a href="products.html">PRODUCTS</a>
+                        <a href="team.html">OUR TEAM</a>
+                        <a href="recipes.html">RECIPES</a>
+                        <a href="partners.html">PARTNERS</a>
+                        <a href="sustainability.html">SUSTAINABILITY</a>
+                    </nav>
+                </section>
+                <div class="menu-wrap">
+                    <input type="checkbox" class="toggler">
+                    <div class="hamburger"><div></div></div>
+                    <div class="menu">
+                        <div>
+                            <div>
+                                <ul>
+                                    <li><a href="index.html">HOME</a></li>
+                                    <li><a href="products.html">PRODUCTS</a></li>
+                                    <li><a href="team.html">OUR TEAM</a></li>
+                                    <li><a href="recipes.html">RECIPES</a></li>
+                                    <li><a href="partners.html">PARTNERS</a></li>
+                                    <li><a hred="sustainability.html">SUSTAINABILITY</a></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
                 <section class="title">
                     <img class="title-logo" src="media/Logo.png" alt="logo">
                     <h1 class="title-title">Feeding the World Sustainably</h1>
