--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                                     <li><a href="team.html">OUR TEAM</a></li>
                                     <li><a href="recipes.html">RECIPES</a></li>
                                     <li><a href="partners.html">PARTNERS</a></li>
-                                    <li><a hred="sustainability.html">SUSTAINABILITY</a></li>
+                                    <li><a href="sustainability.html">SUSTAINABILITY</a></li>
                                 </ul>
                             </div>
                         </div>
