--- a/partners.html
+++ b/partners.html
@@ -1,41 +1,56 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
 
-<html lang="en"> 
-    <head class="head">
-        <!--META-->
-            <meta charset="uft-8">
-            <meta name="viewport" content="width-device-width, initial-scale=1.0">
-            <link rel="stylesheet" href="https://use.typekit.net/wqn4imc.css">
-            <link rel="icon" type="img/png" href="media/Logo.png">
-            <link rel="stylesheet" type="text/css" href="CSS/styles.css"> 
-        <!--NAV-->
-        <nav>
-            <style>
-                body, html {
-                    height: 100%;
-                    margin: 0%;
-                }
-                body {
-                    background-image:url(media/briksdal.png);
-                    background-size: cover;
-                    background-position: bottom;
-                    background-repeat:no-repeat;
-                    padding-bottom: 100%;
-                }
-            </style>
-            <title id="tile">DECAPOD</title>
-            <p id="decapod">DECAPOD</p>
-            <p id="slogan" href="#index">Feeding the World Sustainably</p>
-            <a href="index.html">HOME</a>
-            <a href="products.html">PRODUCTS</a>
-            <a href="team.html">OUR TEAM</a>
-            <a href="recipes.html">RECIPES</a>
-            <a href="partners.html">PARTNERS</a>
-            <a href="sustainability.html">SUSTAINABILITY</a>
-        </nav>
-    </head>
-</html>
-
-<style>
-    
-</style>
+<!-- DOCUMENT FORMATTING-->
+<html lang="en">
+    <!--META-->
+    <meta charset="uft-8">
+    <meta name="viewport" content="width-device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://use.typekit.net/wqn4imc.css">
+    <link rel="icon" type="img/png" href="media/logo.svg">
+    <link rel="stylesheet" type="text/css" href="CSS/styles.css"> 
+    <body>
+        <!--HEAD-->
+        <head class="head">
+            <section class="background">
+                <!--NAV-->
+                <title>DECAPOD</title>
+                <section class="logo-container">
+                    <img class="logo" src="media/logo.svg">
+                    <a href="index.html" class="decapod">DECAPOD</a>
+                    <a href="index.html" class="slogan" href="#index">Feeding the World Sustainably</a>
+                </section>
+                <section class="nav-container">
+                    <nav>
+                        <a href="index.html">HOME</a>
+                        <a href="products.html">PRODUCTS</a>
+                        <a href="team.html">OUR TEAM</a>
+                        <a href="recipes.html">RECIPES</a>
+                        <a href="partners.html">PARTNERS</a>
+                        <a href="sustainability.html">SUSTAINABILITY</a>
+                    </nav>
+                </section>
+                <div class="menu-wrap">
+                    <input type="checkbox" class="toggler">
+                    <div class="hamburger"><div></div></div>
+                    <div class="menu">
+                        <div>
+                            <div>
+                                <ul>
+                                    <li><a href="index.html">HOME</a></li>
+                                    <li><a href="products.html">PRODUCTS</a></li>
+                                    <li><a href="team.html">OUR TEAM</a></li>
+                                    <li><a href="recipes.html">RECIPES</a></li>
+                                    <li><a href="partners.html">PARTNERS</a></li>
+                                    <li><a href="sustainability.html">SUSTAINABILITY</a></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <section class="title">
+                    <img class="title-logo" src="media/Logo.png" alt="logo">
+                    <h1 class="title-title">Feeding the World Sustainably</h1>
+                    <h1 class="title-supportingtext">Pure Norwegian Live Crab</h1>
+                </section>
+            </section> 
+        </head>
