--- a/sustainability.html
+++ b/sustainability.html
@@ -6,25 +6,47 @@
     <meta charset="uft-8">
     <meta name="viewport" content="width-device-width, initial-scale=1">
     <link rel="stylesheet" href="https://use.typekit.net/wqn4imc.css">
-    <link rel="icon" type="img/png" href="media/Logo.png">
+    <link rel="icon" type="img/png" href="media/logo.svg">
     <link rel="stylesheet" type="text/css" href="CSS/styles.css"> 
-    <body>
+    <body class="head">
         <!--HEAD-->
         <head>
             <section class="background-sustainability">
                 <!--NAV-->
-                <nav>
-                    <title>DECAPOD</title>
-                    <img id="logo" src="media/Logo.png">
-                    <p id="decapod">DECAPOD</p>
-                    <p id="slogan" href="#index">Feeding the World Sustainably</p>
-                    <a href="index.html">HOME</a>
-                    <a href="products.html">PRODUCTS</a>
-                    <a href="team.html">OUR TEAM</a>
-                    <a href="recipes.html">RECIPES</a>
-                    <a href="partners.html">PARTNERS</a>
-                    <a href="sustainability.html">SUSTAINABILITY</a>
-                </nav>
+                <title>DECAPOD</title>
+                <section class="logo-container">
+                    <img class="logo" src="media/logo.svg">
+                    <a href="index.html" class="decapod">DECAPOD</a>
+                    <a href="index.html" class="slogan" href="#index">Feeding the World Sustainably</a>
+                </section>
+                <section class="nav-container">
+                    <nav>
+                        <a href="index.html">HOME</a>
+                        <a href="products.html">PRODUCTS</a>
+                        <a href="team.html">OUR TEAM</a>
+                        <a href="recipes.html">RECIPES</a>
+                        <a href="partners.html">PARTNERS</a>
+                        <a href="sustainability.html">SUSTAINABILITY</a>
+                    </nav>
+                </section>
+                <div class="menu-wrap">
+                    <input type="checkbox" class="toggler">
+                    <div class="hamburger"><div></div></div>
+                    <div class="menu">
+                        <div>
+                            <div>
+                                <ul>
+                                    <li><a href="index.html">HOME</a></li>
+                                    <li><a href="products.html">PRODUCTS</a></li>
+                                    <li><a href="team.html">OUR TEAM</a></li>
+                                    <li><a href="recipes.html">RECIPES</a></li>
+                                    <li><a href="partners.html">PARTNERS</a></li>
+                                    <li><a href="sustainability.html">SUSTAINABILITY</a></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
                 <section class="header-sustainability-container">
                     <img class="header-sustainability" src="media/Sustainability-heading.png">
                 </section>
@@ -44,11 +66,9 @@
                 <h3 style="padding-top: 3rem; padding-bottom: 2.5rem; color:white; font-size: 5rem; z-index: 2; background-image: url(media/Brushstroke-red.png); background-repeat: no-repeat; background-position: center; background-size: cover;" >Feed Conversion Ratio</h3>
             </section>
             <section class="section4">
-                <img class="section4-fcr-cattle" src="media/FCR-catttle.png">
-                <section class="section4-text" style="background-image: url(media/brushstroke1.png); background-repeat: no-repeat; background-size: contain;">
-                    <h3 class="section4-text-background-text"style="font-size: 2rem; color: white;">Cattle are one of the least efficient sources of food in terms of how much feed it takes to produce 1 kg of meat.</h3>
-                    <h3 style="font-size: 2rem; color: white; font-weight: bold;">
-                </section>
+                <img src="media/cow.svg" style="width:65rem; margin-bottom: 3rem;">
+                <img src="media/chicken.svg" style="width: 65rem; margin-bottom: 3rem;">
+                <img src="media/crab.svg" style="width: 65rem; margin-bottom: 3rem;"
             </section>
         </section>
         <!--FOOTER-->
@@ -57,7 +77,7 @@
                 <section class="footer-container-text" >
                     <div style="display:flex; align-items: center; justify-content: center;">
                         <div>
-                            <img src="media/Logo.png" style="position:relative; left: -4.5rem; top:4.3rem;width:4rem;height:4rem;">
+                            <img src="media/logo.svg" style="position:relative; left: -4.5rem; top:4.3rem;width:4rem;height:4rem;">
                             <p style="font-size: 34px; margin:0; font-weight: bold;" >DECAPOD</p>
                             <p style="margin:0; font-weight: bold;">Feeding the World Sustainably</p>
                         </div>
