--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                                     <li><a href="index.html">HOME</a></li>
                                     <li><a href="products.html">PRODUCTS</a></li>
                                     <li><a href="team.html">OUR TEAM</a></li>
-                                    <li><a href="recipes.html">RECIPES</a></li>
+                                    <li><a href="recipes.html">Recipes</a></li>
                                     <li><a href="partners.html">PARTNERS</a></li>
                                     <li><a href="sustainability.html">SUSTAINABILITY</a></li>
                                 </ul>
@@ -60,7 +60,6 @@
                 <img src="media/Crab.png" style="float:right; width:100%;">
             </section>
             <section class="about-text">
-                <h3 class="about-text-title">Norwegian Brown Crab Unlike Anything Before</h3>
                 <div class="about-text-body">
                     <h4 class="about-text-body-1">Unmatched Taste</h4>
                     <p class="about-text-body-2">Our crab hotel allows for a carefully monitored environment and feed cycle.</p>
@@ -82,10 +81,12 @@
         <!--Quotes-->
         <section class="quotes">
             <div class="quote-1">
-                <h5 class="quote-1-text">"We've been serving crab for 35 years and have never seen produce like this"</h6>
+                <h2 class="quote-1-text">"We've been serving crab for 35 years and have never seen produce like this"</h2>
+                <p class="quote-1-text2">Huwei-Ming Yang <br> Executive Chef at The Ministry of Crab</p>
             </div>
             <div class="quote-2">
-                <h5 class="quote-2-text">"In terms of health and environmental sustainability Decapod's crab stands unmathced"</h6>
+                <h2 class="quote-2-text">"In terms of health and environmental sustainability Decapod's crab stands unmatched"</h2>
+                <p class="quote-2-text2">Asgeir Torvaldson <br> Researcher at the norwegian Institute for Marine research and Professor at UIB</p>
             </div>
         </section>
         <!--VIDEO-->
@@ -95,10 +96,10 @@
         <!--SUBSCRIBE-->
         <section class="subscribe">
             <section class="subscribe-top">
-                <h3>Stay Updated</h3>
+                <h1 >Stay Updated</h1>
             </section>
             <section class="subscribe-bot">
-                <input type="email" placeholder="Email"> 
+                <input type="email" class="email" placeholder="Email"> 
                 <input type="submit" class="button2" value="SUBSCRIBE">
             </section>
         </section>
@@ -107,20 +108,20 @@
             <section class="footer-container">
                 <section class="footer-container-text" >
                     <div style="display:flex; align-items: center; justify-content: center;">
-                        <div>
-                            <img src="media/logo.svg" style="position:relative; left: -4.5rem; top:4.3rem;width:4rem;height:4rem;">
-                            <p style="font-size: 34px; margin:0; font-weight: bold;" >DECAPOD</p>
-                            <p style="margin:0; font-weight: bold;">Feeding the World Sustainably</p>
+                        <div class="footer-decapod-container">
+                            <img class="footer-decapod-logo" src="media/logo.svg" style="position:relative; left: -4.5rem; top:4.3rem;width:4rem;height:4rem;">
+                            <a class="footer-decapod" href="index.html" style="font-family: raleway, sans-serif; font-size: 2.9rem; text-decoration: none;">DECAPOD</a>
+                            <a class="footer-decapod-slogan" href="index.html">Feeding the World Sustainably</a>
                         </div>
                     </div>
                     <div style="display:flex; align-items: center; justify-content: center; transform: translateY(2.1rem);">
                         <div>
-                            <p style="font-weight: bold;">Staumøyvegen 28B, 5544 Vålevåg <br> Phone: (+47) 90770976 <br> Email: Inquiries@ms-solutions.no</p>
+                            <h3 style="font-weight: bold;">Staumøyvegen 28B, 5544 Vålevåg <br> Phone: (+47) 90770976 <br> Email: Inquiries@ms-solutions.no</h3>
                         </div>
                     </div>
                     <div style="display:flex; align-items: center; justify-content: center; transform: translateY(3.2rem);">
                         <div>
-                            <p style="font-weight: bold;">© MS Solutions AS</p>
+                            <h3 style="font-weight: bold;">© MS Solutions AS</h3>
                         </div>
                     </div>
                 </section>
