--- a/recipes.html
+++ b/recipes.html
@@ -189,10 +189,10 @@
             <section class="footer-container">
                 <section class="footer-container-text" >
                     <div style="display:flex; align-items: center; justify-content: center;">
-                        <div>
-                            <img src="media/Logo.png" style="position:relative; left: -4.5rem; top:4.3rem;width:4rem;height:4rem;">
-                            <p style="font-size: 34px; margin:0; font-weight: bold;" >DECAPOD</p>
-                            <p style="margin:0; font-weight: bold;">Feeding the World Sustainably</p>
+                        <div class="footer-decapod-container">
+                            <img class="footer-decapod-logo" src="media/logo.svg" style="position:relative; left: -4.5rem; top:4.3rem;width:4rem;height:4rem;">
+                            <a class="footer-decapod" href="index.html" style="font-family: raleway, sans-serif; font-size: 2.9rem; text-decoration: none;">DECAPOD</a>
+                            <a class="footer-decapod-slogan" href="index.html">Feeding the World Sustainably</a>
                         </div>
                     </div>
                     <div style="display:flex; align-items: center; justify-content: center; transform: translateY(2.1rem);">
