--- a/sustainability.html
+++ b/sustainability.html
@@ -47,28 +47,30 @@
                         </div>
                     </div>
                 </div>
-                <section class="header-sustainability-container">
-                    <img class="header-sustainability" src="media/Sustainability-heading.png">
+                <section class="title-sustainability">
+                    <h1 class="title-sustainability-title">Sustainability</h1>
+                    <h2 class="title-sustainability-supportingtext">Maximum taste. Minimum Waste.</h2>
                 </section>
             </section> 
         </head>
         <img class="starfish" src="media/Starfish.png">
         <section class="section">
             <section class="section1">
-                <h1 style="color:#104364; font-size: 5rem;">Our Obligation to Nature</p>
-                <h3 style="color:white; font-size: 2rem;">We reduce the resource burden to our planet and foster a sustainable future with record low Co2e emissions and efficient feeding, while maintaining the highest standards of animal well-being.</h3>
+                <h1 style="color:#104364; margin-bottom: 1rem; margin-top: 0;">Our Obligation to Nature</h1>
+                <p style="font-size: 2rem; margin-top: 0;">We reduce the resource burden to our planet and foster a sustainable future with record low Co2e emissions and efficient feeding, while maintaining the highest standards of animal well-being.</p>
             </section>
             <section class="section2">
-                <h3 style="padding-top: 2.5rem; padding-bottom: 1rem; color:white; font-size: 5rem; z-index: 2; background-image: url(media/Brushstroke-red.png); background-repeat: no-repeat; background-position: center; background-size: cover;" >CO2e</h3>
-                <img src="media/sustainability-graph.png" style="width: 100%;">
+                <h1 style="padding-top: 2.5rem; padding-bottom: 1rem; z-index: 2; color:#104364" >CO<sub>2</sub>e</h1>
+                <img src="media/Co2e.svg" style="width: 100%;">
             </section>
             <section class=section3>
-                <h3 style="padding-top: 3rem; padding-bottom: 2.5rem; color:white; font-size: 5rem; z-index: 2; background-image: url(media/Brushstroke-red.png); background-repeat: no-repeat; background-position: center; background-size: cover;" >Feed Conversion Ratio</h3>
+                <h1 style="padding-top: 3rem; padding-bottom: 2.5rem;z-index: 2; color: #104364" >Feed Conversion Ratio</h1>
             </section>
             <section class="section4">
                 <img src="media/cow.svg" style="width:65rem; margin-bottom: 3rem;">
                 <img src="media/chicken.svg" style="width: 65rem; margin-bottom: 3rem;">
-                <img src="media/crab.svg" style="width: 65rem; margin-bottom: 3rem;"
+                <img src="media/fish.svg" style="width: 65rem; margin-bottom: 3rem;">
+                <img src="media/crab.svg" style="width: 65rem; margin-bottom: 3rem;">
             </section>
         </section>
         <!--FOOTER-->
@@ -76,10 +78,10 @@
             <section class="footer-container">
                 <section class="footer-container-text" >
                     <div style="display:flex; align-items: center; justify-content: center;">
-                        <div>
-                            <img src="media/logo.svg" style="position:relative; left: -4.5rem; top:4.3rem;width:4rem;height:4rem;">
-                            <p style="font-size: 34px; margin:0; font-weight: bold;" >DECAPOD</p>
-                            <p style="margin:0; font-weight: bold;">Feeding the World Sustainably</p>
+                        <div class="footer-decapod-container">
+                            <img class="footer-decapod-logo" src="media/logo.svg" style="position:relative; left: -4.5rem; top:4.3rem;width:4rem;height:4rem;">
+                            <a class="footer-decapod" href="index.html" style="font-family: raleway, sans-serif; font-size: 2.9rem; text-decoration: none;">DECAPOD</a>
+                            <a class="footer-decapod-slogan" href="index.html">Feeding the World Sustainably</a>
                         </div>
                     </div>
                     <div style="display:flex; align-items: center; justify-content: center; transform: translateY(2.1rem);">
