--- a/team.html
+++ b/team.html
@@ -53,33 +53,43 @@
 
     
         <!--ABOUT JAN ROAR-->
-        <div style="max-width: 60rem; max-height: 40rem; font-size: 1.5rem; text-align: justify; text-align-last: center; margin:auto; transform:translateY(-130%);padding-left: 20%;padding-right: 20%;">
+        <div style="max-width: 60rem; max-height: 40rem; font-size: 1.5rem; text-align: justify; text-align-last: center; margin:auto; transform:translateY(-130%);padding-left: 20%;padding-right: 20%; margin-bottom: 5rem;">
             <p>Born and raised on the Norwegian island Karmøy, Jan Roar has always been close to the sea. Ever since childhood he took a particular interest for crabs. After spending the early days of his education and career as a mechanic, Jan Roar started designing and devloping machinery for the industrial production of crab - something he has now been doing for 33 years. Jan Roar is the inventor of all of MS-Solutions’ crab handling technologies and is thereby the most essential member of our team. .</p>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum dicta tempore dolor debitis at provident sed ipsa recusandae quos minima itaque harum animi, numquam exercitationem. Magnam repellat beatae modi dignissimos quam quia illum voluptas quis perspiciatis facere nihil vitae dicta praesentium fugiat eligendi sapiente magni tempore dolorem ut, ex qui accusantium tempora repellendus possimus. Nam fuga laborum recusandae accusamus magni!</p>
             <p style="font-weight: bold;">jan.storesund@decapod.no</p>
         </div>
         <!--TEAM-->
         <section class="team" style="transform:translateY(-50%)">
-            <div style="display: flex; justify-content: space-evenly;">
+            <div style="display: flex; justify-content: space-evenly; margin-bottom: 0;">
                 <img class="portrait" src="media/Kjell.png">
                 <img class="portrait" src="media/egil.png">
                 <img class="portrait" src="media/folke.png">
             </div>
-            <div style="display: grid; grid-template-columns: repeat(3, 1fr);gap: 0% 5%; margin: 8%; text-align: justify; font-size: 1.5rem;">
-                <p>Kjell is educated as a state authorized accountant with a degree from the Norwegian School of Economics. He has over 30 years' experience in corporate finance as a business risk manager, consultant, M&A manager, and has notably spent 10 years as partner at EY. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quos quam magni adipisci tenetur laudantium facilis excepturi laboriosam quo sit modi.</p>
+            <div style="display: grid; grid-template-columns: repeat(3, 1fr);gap: 0% 5%; margin: 8%; text-align: center; font-size: 1.5rem; font-weight: bold; margin-top: 0; margin-bottom: 0; ">
+                <p>Kjell Stenersen</p>
+                <p>Egil Melkevik</p>
+                <p>Folke Hermansen</p>
+            </div>
+            <div style="display: grid; grid-template-columns: repeat(3, 1fr);gap: 0% 5%; margin: 8%; text-align: center; font-size: 1.5rem; font-weight: bold; margin-top: 0; margin-bottom: 0;">
+                <a style=" text-decoration: none; color: black;" href="mailto:kjell@kstenersen.com">Kjell@kstenersen.com</a>
+                <a style=" text-decoration: none; color: black;" href="mailto:egil.melkevik@ms-solutions.no">Egil.Melkevik@MS-Solutions.no</a>
+                <a style=" text-decoration: none; color: black;" href="mailto:folke.hermansen@ms-solutions.no">Folke.Hermansen@MS-Solitions.no</a>
+            </div>
+            <div style="display: grid; grid-template-columns: repeat(3, 1fr);gap: 0% 5%; margin: 8%; text-align: justify; font-size: 1.5rem; margin-top: 0; margin-bottom: 0;">
+                <p>Kjell is educated as a state authorized accountant with a degree from the Norwegian School of Economics. He has over 30 years' experience in corporate finance as a business risk manager, consultant, M&A manager, and has notably spent 10 years as partner at EY. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quos quam magni adipisci tenetur laudantium facilis excepturi laboriosam quo sit modi. Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel perferendis et quasi sunt laborum magnam nisi aliquid autem dolorem sapiente! lorem20</p>
                 <p>Egil has a M.Sc in international business and over 30 years of experience in managerial roles. This includes having been a supply chain accountant, sales manager at Hydro Aluminium, CEO at Norsk Privatøkonomi, CFO at Bauer hydrolics, supply chain manager at Imenco group, and holding numerous board positions. After seeing the potential in the crab autofeed technology Jan Roar had invented, the two of them founded Decapod in 2018 with Egil taking charge of administrative and managerial responisbilities allowing Jan Roar to focus on further developing our technologies.</p>
                 <p>Folke is the newest and youngest memer of Decapods' team. Folke has had a lifelong love for the sea and crab fishing. This, along with his ambition and broad skillset has made him a good match for Decapod at this stage of our growth. Folke was taking a bachelor's in business at NHH before joining Decapod. He also has experience as a financial controller, board member in a capital asset management firm, & and as CEO of his own investment vehicle, Currently, Folke is primarily responsible for web design, development, and media production but also takes on offhand tasks.</p>
             </div>
         </section>
         <!--FOOTER-->
-        <section class="footer" style="background: linear-gradient(#f9f9f9, #ffca81); transform:translateY(150rem);">
+        <section class="footer" style="background: linear-gradient(#f9f9f9, #ffca81); transform:translateY(130rem);">
             <section class="footer-container">
                 <section class="footer-container-text" >
                     <div style="display:flex; align-items: center; justify-content: center;">
-                        <div>
-                            <img src="media/logo.svg" style="position:relative; left: -4.5rem; top:4.3rem;width:4rem;height:4rem;">
-                            <p style="font-size: 34px; margin:0; font-weight: bold;" >DECAPOD</p>
-                            <p style="margin:0; font-weight: bold;">Feeding the World Sustainably</p>
+                        <div class="footer-decapod-container">
+                            <img class="footer-decapod-logo" src="media/logo.svg" style="position:relative; left: -4.5rem; top:4.3rem;width:4rem;height:4rem;">
+                            <a class="footer-decapod" href="index.html" style="font-family: raleway, sans-serif; font-size: 2.9rem; text-decoration: none;">DECAPOD</a>
+                            <a class="footer-decapod-slogan" href="index.html">Feeding the World Sustainably</a>
                         </div>
                     </div>
                     <div style="display:flex; align-items: center; justify-content: center;">
