--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     <p class="about-text-body-2">Our crab hotel allows for a carefully monitored environment and feed cycle.</p>
                     
                     <h4 class="about-text-body-1">Full of Meat</hh4>
-                    <p class="about-text-body-2">We feed our crabs for 30 days and quality controll every crab to ensure maximum filling degree.</p>
+                    <p class="about-text-body-2">Our feeding technoligies and methods ensure maximum meat content.</p>
                     
                     <h4 class="about-text-body-1">Reliable Delivery all Year Round</h4>
                     <p class="about-text-body-2">Traditional fishing results in insufficient availability and quality due to seasonal variation.</p>
@@ -81,7 +81,7 @@
         <!--Quotes-->
         <section class="quotes">
             <div class="quote-1">
-                <h2 class="quote-1-text">"We've been serving crab for 35 years and have never seen produce like this"</h2>
+                <h2 class="quote-1-text">"We've been serving crabs for 35 years and have never seen a product like this"</h2>
                 <p class="quote-1-text2">Huwei-Ming Yang <br> Executive Chef at The Ministry of Crab</p>
             </div>
             <div class="quote-2">
