--- a/index.html
+++ b/index.html
@@ -116,7 +116,9 @@
                     </div>
                     <div style="display:flex; align-items: center; justify-content: center; transform: translateY(2.1rem);">
                         <div>
-                            <h3 style="font-weight: bold;">Staumøyvegen 28B, 5544 Vålevåg <br> Phone: (+47) 90770976 <br> Email: Inquiries@ms-solutions.no</h3>
+                            <a style="margin-bottom: 0;font-family: raleway, sans-serif; font-size: 1.2rem;text-decoration: none; color: black" href="https://www.google.com/maps/search/Staum%C3%B8yvegen+28B,+5544+V%C3%A5lev%C3%A5g/@59.6983696,5.4654076,15z/data=!3m1!4b1">Staumøyvegen 28B, 5544 Vålevåg</a><br>
+                            <a href="tel:+47 90770976" style="font-family: raleway, sans-serif; font-size: 1.2rem;text-decoration: none; color: black;margin-top: 0; margin-bottom: 0;">Phone: (+47) 90770976</h3><br>
+                            <a style="font-family: raleway, sans-serif; font-size: 1.2rem; margin-top: 0;text-decoration: none; color: black;" href="mailto:inquiries@ms-solutions.no">Email: Inquiries@ms-solutions.no</a>
                         </div>
                     </div>
                     <div style="display:flex; align-items: center; justify-content: center; transform: translateY(3.2rem);">
